[tool.poetry]
name = "incolume.py.fastapi.legis"
version = "0.1.0"
description = "API em FastAPI de acesso aos Atos Jurídicos"
authors = ["britodfbr <britodfbr@gmail.com>"]
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"
tomli = {version="^2.0.1", python = ">=3.8,<=3.10"}
dynaconf = "^3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
