[tool.poetry]
name = "incolume.py.fastapi.legis"
version = "0.1.0"
description = "API em FastAPI de acesso aos Atos Jurídicos"
authors = ["britodfbr <britodfbr@gmail.com>"]
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"
tomli = {version="^2.0.1", python = ">=3.8,<=3.10"}
dynaconf = "^3.1.12"
fastapi = {extras = ["all"], version = "^0.95.0"}
fastapi-pagination = "^0.11.4"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.8"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
